image user + logic fix + update